Fixes for header overrun on mobile

--- a/themes/san-diego/source/styles/_blog.scss
+++ b/themes/san-diego/source/styles/_blog.scss
@@ -39,6 +39,12 @@
 			height: 100%;
 			padding: 0;
 			gap: 0;
+			width: 100%;
+			max-width: 100vw;
+			margin-left: auto;
+			margin-right: auto;
+			overflow-x: hidden;
+			overflow-y: visible;
 		}
 	}
 
